--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "MeteorReactBoilerplate",
   "private": true,
-  "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0",
-    "moment": "^2.14.1",
-    "react": "^15.2.1",
-    "react-addons-css-transition-group": "^15.2.1",
-    "react-dom": "^15.2.1",
+    "meteor-node-stubs": "^0.2.4",
+    "moment": "^2.17.1",
+    "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-mounter": "^1.2.0"
   }
 }
